create github pages

--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-<section class="mbr-section form1 cid-qDKNI6PWOG" id="form1-2" data-rv-view="9">
+<section class="mbr-section form1 cid-qDKNI6PWOG" id="form1-2" data-rv-view="18">
 
     
 
@@ -40,7 +40,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="gkm+LJVnc8nSSJBo0p1Ck8HDCyqxefxtrPPvmYIrfWt6QMmuiAbpAo9RSWCKCFxJLZirgubYaJBslZK9X38/aPIWAsQI0TNu26sBrKc5YxyCwIJl7a9DYB8xCG7Mymux">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="W3/ew23H/WoRJPjEWqAUeLjmsPhDM2iDrazjVWp/76phgKeLM/GvXE58++1oAv5HpC80dRJVjTDIEXOAWpOYKvj5kfVX98RRUOBgVNOUyn19lTTF8L5C8f3ZEgzmYwul">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -76,7 +76,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/e">web page building software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
